# rinhadebackend-cpp-crow

./: .clang-format  .dockerignore  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.builder  Makefile  README.md  build.sh  create.sql  db.string  docker-build.sh  docker-compose.yaml  nginx.conf  postgresql.conf  run.sh  vcpkg.json
docker/database/: init.sql
docker/nginx/: nginx.conf
include/: app_config.h  db_config.h  http_status.h  pq_conn_pool.h  ts_queue.hpp  ts_unordered_set.hpp  utils.hpp
include/handlers/: get-contagem-pessoas.hpp  get-pessoas-by-id.hpp  get-pessoas-like-term.hpp  post-pessoas.hpp
scripts/: build.sh  setup.sh
src/: App.cpp  cpp_crown.cpp  db_config.h  main.cpp  pq_conn_pool.cpp  uuid.h
utility/: install-crow.sh
vs/: api-crow-cpp.sln  api-crow-cpp.vcxproj  api-crow-cpp.vcxproj.filters
